RESOLVED FIXED311586
Facebook: Unable to drag volume slider in video's media control.
https://bugs.webkit.org/show_bug.cgi?id=311586
Summary Facebook: Unable to drag volume slider in video's media control.
joanne_pan2
Reported 2026-04-06 12:30:37 PDT
Dupe of rdar://171185607 for tracking purposes, since the original radar had Facebook and TikTok categorized together, and would need 2 separate fixes.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-04-06 12:30:42 PDT
joanne_pan2
Comment 2 2026-04-06 18:41:34 PDT
EWS
Comment 3 2026-04-15 15:56:53 PDT
Committed 311328@main (7c622cdabaac): <https://commits.webkit.org/311328@main> Reviewed commits have been landed. Closing PR #62158 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.