Facebook: Unable to drag volume slider in video's media control. https://bugs.webkit.org/show_bug.cgi?id=311586 rdar://174179871

Reviewed by Tim Nguyen and Abrar Rahman Protyasha.

The problem: On iPad Safari, Facebook's video volume slider
only responds to taps and not drags because it is expecting mousemove events.
While there is a existing Quirk that synthesizes
mouse events from touch, I thought it was too broad to apply
that to every touch event on all of facebook.com. Possible consequences
being double handling in React components that work
fine currently.

The fix: Inject a JS quirk for facebook.com that converts touch
events into mouse events only on [role="slider"] elements.
The mousedown is deferred to the first touchmove to
avoid interfering with tap interactions. Also applies
touch:action to prevent page scrolling during slider drag.

* LayoutTests/fast/events/touch/ios/slider-touch-drag-quirk-expected.txt: Added.
* LayoutTests/fast/events/touch/ios/slider-touch-drag-quirk.html: Added.
* Source/WebCore/page/Quirks.cpp:
* Source/WebCore/page/QuirksData.h:

Canonical link: https://commits.webkit.org/311328@main